--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,9 +31,11 @@ jobs:
         uses: hashicorp/setup-terraform@v2
 
       - name: Terraform Init
+        working-directory: ./devops/terraform
         run: |
           export TF_LOG=DEBUG
           terraform init
 
       - name: Terraform Apply
+        working-directory: ./devops/terraform
         run: terraform apply -auto-approve
