refactor: change project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tech-challenge-lambdas",
+  "name": "tech-challenge-lambda-payment",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
