--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.147",
+    "@types/node": "^22.13.10",
+    "@types/winston": "^2.4.4",
     "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1692.0",
+    "winston": "^3.17.0",
+    "winston-cloudwatch": "^6.3.0"
   }
 }
