--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.147",
+    "@types/axios": "^0.9.36",
     "@types/node": "^22.13.10",
     "@types/winston": "^2.4.4",
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "winston": "^3.17.0"
   }
 }
